spacing fixes

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -228,11 +228,7 @@
 
         .full-bg-banner.with-bg-inside .full-bg-banner-wrapper {
             padding: 21px 32px;
-        }
-
-        .full-bg-banner-title {
-            margin-bottom: 29px;
-        }
+        }        
 
         .full-bg-banner {
             padding-top: 42px;
